--- a/BroadwayShows.Blazor/appsettings.json
+++ b/BroadwayShows.Blazor/appsettings.json
@@ -10,7 +10,8 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "dev-i4zhlu33ns0wt7sz.us.auth0.com",
-    "ClientId": "GIeaHP7YC3md0C8KvNxZON1uBXMsfRHo"
+    "Domain": "dev-ha5237t1rpr6x80o.us.auth0.com",
+    "ClientId": "aNg8PdW9fkEqsnMKlC1xrLOv1qtaEXjt",
+    "ClientSecret": "AUYUSZB8HW-QbGYzDPPWVW0JoWmQtt61KZb-olf2FhAdTD69B37xieHHuue1OfFM"
   }
 }
