--- a/BroadwayShows.Blazor/BroadwayShows.Blazor.csproj
+++ b/BroadwayShows.Blazor/BroadwayShows.Blazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,6 +10,11 @@
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.13" />
+    <PackageReference Include="Syncfusion.Blazor.Buttons" Version="23.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.Calendars" Version="23.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.Core" Version="23.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.DropDowns" Version="23.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.1.44" />
   </ItemGroup>
 
   <ItemGroup>
